# soai_session2

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
templates/: index.html
tests/: test_app.py
